# api_tarea2

./: .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  api_tarea1.db  build.rs  service-account.enc  service-account.json
.sqlx/: query-0b9a2cffdd6a09f61d3a90412155d294e50c1383ee48d2745961c81e0b4e92b7.json
dll/: sqlite3.exp  sqlite3.lib
src/: main copy 2.rs  main copy.rs  main.rs  models.rs
