[package]
name = "api_tarea1"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.9.0"
actix-web-actors = "4.0.0"
tokio = { version = "1", features = ["full"] }
rusqlite = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
async-stream = "0.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
yup-oauth2 = "8.0.0"
async-trait = "0.1.68" 
tokio-stream = "0.1" 
env_logger = "0.10"
log = "0.4"
aes-gcm = "0.10"
base64 = "0.21"
